ARM: at91: add basic support for sama5d2 SoC
Add Kconfig entries early assembly modifications and header file changes.

Signed-off-by: Ludovic Desroches <ludovic.desroches@atmel.com>
Signed-off-by: Nicolas Ferre <nicolas.ferre@atmel.com>

--- a/arch/arm/mach-at91/Kconfig
+++ b/arch/arm/mach-at91/Kconfig
@@ -15,6 +15,9 @@ config HAVE_AT91_DBGU1
 config HAVE_AT91_DBGU2
 	bool
 
+config HAVE_AT91_DBGU3
+	bool
+
 config COMMON_CLK_AT91
 	bool
 	select COMMON_CLK
@@ -68,6 +71,21 @@ endchoice
 comment "Atmel AT91 Processor"
 
 if SOC_SAM_V7
+
+config SOC_SAMA5D2
+	bool "SAMA5D2 family"
+	select SOC_SAMA5
+	select HAVE_AT91_DBGU3
+	select CLKSRC_MMIO
+	select CACHE_L2X0
+	select CACHE_PL310
+	select HAVE_FB_ATMEL
+	select HAVE_AT91_UTMI
+	select HAVE_AT91_USB_CLK
+	select HAVE_AT91_H32MX
+	help
+	  Select this if ou are using one of Atmel's SAMA5D2 family SoC.
+
 config SOC_SAMA5D3
 	bool "SAMA5D3 family"
 	select SOC_SAMA5
