devicetree: macb: fix the compatibility value for sama5d2x SoCs
Signed-off-by: Cyrille Pitchen <cyrille.pitchen@atmel.com>

--- a/arch/arm/boot/dts/at91-sama5d2_xplained.dts
+++ b/arch/arm/boot/dts/at91-sama5d2_xplained.dts
@@ -78,6 +78,11 @@
 
 	ahb {
 		apb {
+			macb0: ethernet@f8008000 {
+				phy-mode = "rmii";
+				status = "okay";
+			};
+
 			uart1: serial@f8020000 {
 				status = "okay";
 			};
