--- a/arch/arm/boot/dts/sama5d2.dtsi
+++ b/arch/arm/boot/dts/sama5d2.dtsi
@@ -56,6 +56,7 @@
 
 	aliases {
 		serial0 = &uart1;
+		serial1 = &uart3;
 		tcb0 = &tcb0;
 		tcb1 = &tcb1;
 	};
@@ -627,6 +628,16 @@
 					clocks = <&slow_rc_osc &slow_osc>;
 				};
 			};
+
+			uart3: serial@fc008000 {
+				compatible = "atmel,at91sam9260-usart";
+				reg = <0xfc008000 0x100>;
+				interrupts = <27 IRQ_TYPE_LEVEL_HIGH 7>;
+				clocks = <&uart3_clk>;
+				clock-names = "usart";
+				status = "disabled";
+			};
+
 
 			aic: interrupt-controller@fc020000 {
 				#interrupt-cells = <3>;
