ARM: at91/dt: sama5d2: add pinctrl definition
Both pinctrl with new pio4 driver and associated syscon declaration.

Signed-off-by: Nicolas Ferre <nicolas.ferre@atmel.com>

--- a/arch/arm/boot/dts/sama5d2.dtsi
+++ b/arch/arm/boot/dts/sama5d2.dtsi
@@ -635,6 +635,18 @@
 				reg = <0xfc020000 0x200>;
 				atmel,external-irqs = <49>;
 			};
+
+			pio_reg: syscon@fc038000 {
+				compatible = "atmel,sama5d2-pio_reg", "syscon";
+				reg = <0xfc038000 0x600>;
+			};
+
+			pinctrl@fc038000 {
+				#address-cells = <1>;
+				#size-cells = <1>;
+				compatible = "atmel,sama5d2-pinctrl", "simple-bus";
+				atmel,pio_reg = <&pio_reg 0x0>;
+			};
 		};
 	};
 };
