--- a/arch/arm/boot/dts/sama5d2.dtsi
+++ b/arch/arm/boot/dts/sama5d2.dtsi
@@ -116,6 +116,22 @@
 			cache-level = <2>;
 		};
 
+		sdmmc0: sdio-host@a0000000 {
+			compatible = "atmel,sama5d2-sdhci";
+			reg = <0xa0000000 0x100>;
+			interrupts = <31 IRQ_TYPE_LEVEL_HIGH 0>;
+			clocks = <&sdmmc0_clk>;
+			status = "disabled";
+		};
+
+		sdmmc1: sdio-host@b0000000 {
+			compatible = "atmel,sama5d2-sdhci";
+			reg = <0xb0000000 0x100>;
+			interrupts = <32 IRQ_TYPE_LEVEL_HIGH 0>;
+			clocks = <&sdmmc1_clk>;
+			status = "disabled";
+		};
+
 		apb {
 			compatible = "simple-bus";
 			#address-cells = <1>;
@@ -492,12 +508,12 @@
 						reg = <15>;
 					};
 
-					mci0_clk: mci0_clk {
+					sdmmc0_clk: sdmmc0_clk {
 						#clock-cells = <0>;
 						reg = <31>;
 					};
 
-					mci1_clk: mci1_clk {
+					sdmmc1_clk: sdmmc1_clk {
 						#clock-cells = <0>;
 						reg = <32>;
 					};
