--- a/arch/arm/boot/dts/at91-sama5d2_xplained.dts
+++ b/arch/arm/boot/dts/at91-sama5d2_xplained.dts
@@ -133,12 +133,22 @@
 						function = "A";
 						groups = "uart1_0";
 					};
+
+					conf {
+						group = "uart1_0";
+						bias-disable;
+					};
 				};
 
 				pinctrl_uart3_default: uart3_default {
 					mux {
 						function = "C";
 						groups = "uart3_0";
+					};
+
+					conf {
+						group = "uart3_0";
+						bias-disable;
 					};
 				};
 			};
