ARM: at91/dt: sama5d2 xplained: add sdmmc1 pin conf
Signed-off-by: Ludovic Desroches <ludovic.desroches@atmel.com>

--- a/arch/arm/boot/dts/at91-sama5d2_xplained.dts
+++ b/arch/arm/boot/dts/at91-sama5d2_xplained.dts
@@ -126,6 +126,21 @@
 						function = "E";
 						groups = "sdmmc1_0";
 					};
+
+					conf-cmd_data {
+						pins = <PIN_PA28__SDMMC1_CMD>,
+						       <PIN_PA18__SDMMC1_DAT0>,
+						       <PIN_PA19__SDMMC1_DAT1>,
+						       <PIN_PA20__SDMMC1_DAT2>,
+						       <PIN_PA21__SDMMC1_DAT3>;
+						bias-pull-up;
+					};
+
+					conf-ck_cd {
+						pins = <PIN_PA22__SDMMC1_CK>,
+						       <PIN_PA30__SDMMC1_CD>;
+						bias-disable;
+					};
 				};
 
 				pinctrl_uart1_default: uart1_default {
