ARM: at91/dt: sama5d2 Xplained: enable USB host controllers
Warning: vbus not filled up yet.

Signed-off-by: Nicolas Ferre <nicolas.ferre@atmel.com>

--- a/arch/arm/boot/dts/at91-sama5d2_xplained.dts
+++ b/arch/arm/boot/dts/at91-sama5d2_xplained.dts
@@ -78,6 +78,16 @@
 	};
 
 	ahb {
+		usb1: ohci@00400000 {
+			num-ports = <3>;
+			/* TODO: add atmel,vbus-gpio property */
+			status = "okay";
+		};
+
+		usb2: ehci@00500000 {
+			status = "okay";
+		};
+
 		sdmmc1: sdio-host@b0000000 {
 			bus-width = <4>;
 			pinctrl-names = "default";
