ARM: at91/dt: sama5d2: add comment about pinctrl for USB host VBUS
TODO: squash in previous patch.

Signed-off-by: Nicolas Ferre <nicolas.ferre@atmel.com>

--- a/arch/arm/boot/dts/at91-sama5d2_xplained.dts
+++ b/arch/arm/boot/dts/at91-sama5d2_xplained.dts
@@ -81,6 +81,8 @@
 		usb1: ohci@00400000 {
 			num-ports = <3>;
 			/* TODO: add atmel,vbus-gpio property */
+			/*pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_usb_default>;*/
 			status = "okay";
 		};
 
