ARM: at91/dt: sama5d2 Xplained: add USB gadget node
WARNING: no pinctrl nor vbus GPIO definition set.
WARNING: not tested yet

Signed-off-by: Nicolas Ferre <nicolas.ferre@atmel.com>

--- a/arch/arm/boot/dts/at91-sama5d2_xplained.dts
+++ b/arch/arm/boot/dts/at91-sama5d2_xplained.dts
@@ -78,6 +78,13 @@
 	};
 
 	ahb {
+		usb0: gadget@00300000 {
+			/* TODO: add atmel,vbus-gpio property */
+			/*pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_usba_vbus>;*/
+			status = "okay";
+		};
+
 		usb1: ohci@00400000 {
 			num-ports = <3>;
 			/* TODO: add atmel,vbus-gpio property */
