ARM: at91/dt: sama5d2 Xplained pda4: fix i2c0 pinmux
Use correct pinmux for i2c0.

Signed-off-by: Ludovic Desroches <ludovic.desroches@atmel.com>

--- a/arch/arm/boot/dts/at91-sama5d2_xplained_pda4.dts
+++ b/arch/arm/boot/dts/at91-sama5d2_xplained_pda4.dts
@@ -222,8 +222,8 @@
 					};
 
 					i2c0_0 {
-						pins = <PIN_PB31__TWD0>,
-						       <PIN_PC0__TWCK0>;
+						pins = <PIN_PD21__TWD0>,
+						       <PIN_PD22__TWCK0>;
 					};
 
 					i2c1_0 {
@@ -335,13 +335,13 @@
 
 				pinctrl_i2c0_default: i2c0_default {
 					mux {
-						function = "D";
+						function = "B";
 						groups = "i2c0_0";
 					};
 
 					conf {
-						pins = <PIN_PB31__TWD0>,
-						       <PIN_PC0__TWCK0>;
+						pins = <PIN_PD21__TWD0>,
+						       <PIN_PD22__TWCK0>;
 						bias-disable;
 					};
 				};
