Kconfig: atmel-isi: select PM_RUNTIME for atmel-isi driver
As ISI driver use the PM runtime api to disable/enable clocks, so it
depends on PM_RUNTIME.

This patch will select PM_RUNTIME if ATMEL_ISI driver is enabled.

Signed-off-by: Josh Wu <josh.wu@atmel.com>

--- a/drivers/media/platform/soc_camera/Kconfig
+++ b/drivers/media/platform/soc_camera/Kconfig
@@ -84,6 +84,7 @@ config VIDEO_ATMEL_ISI
 	depends on VIDEO_DEV && SOC_CAMERA
 	depends on ARCH_AT91 || COMPILE_TEST
 	depends on HAS_DMA
+	select PM_RUNTIME
 	select VIDEOBUF2_DMA_CONTIG
 	---help---
 	  This module makes the ATMEL Image Sensor Interface available
